--- a/custom_components/must_inverter/translations/en.json
+++ b/custom_components/must_inverter/translations/en.json
@@ -44,12 +44,52 @@
           "reconnect_delay_max": "Max Reconnect Delay (seconds)"
         }
       }
-    },
-    "error": {
-      "already_configured": "Device is already configured"
-    },
-    "abort": {
-      "already_configured": "Device is already configured"
+    }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "Select the connection type",
+        "menu_options": {
+          "serial": "USB or Serial",
+          "tcp": "TCP",
+          "tls": "TLS",
+          "udp": "UDP"
+        }
+      },
+      "serial": {
+        "title": "USB or serial",
+        "data": {
+          "device": "USB or Serial device path",
+          "baudrate": "Baud rate",
+          "parity": "Parity (‘E’ven, ‘O’dd or ‘N’one)",
+          "stopbits": "Stop bits (1, 1.5, 2)",
+          "bytesize": "Byte size (7, 8)"
+        }
+      },
+      "tcp": {
+        "title": "TCP",
+        "data": {
+          "host": "Host",
+          "port": "Port"
+        }
+      },
+      "udp": {
+        "title": "UDP",
+        "data": {
+          "host": "Host",
+          "port": "Port"
+        }
+      },
+      "common": {
+        "title": "Configuration",
+        "data": {
+          "timeout": "Timeout (seconds)",
+          "retries": "Retries",
+          "reconnect_delay": "Reconnect Delay (seconds)",
+          "reconnect_delay_max": "Max Reconnect Delay (seconds)"
+        }
+      }
     }
   }
 }
