feat: allow configuring scan_interval

--- a/custom_components/must_inverter/translations/en.json
+++ b/custom_components/must_inverter/translations/en.json
@@ -38,6 +38,7 @@
       "common": {
         "title": "Configuration",
         "data": {
+          "scan_interval": "Scan Interval (seconds)",
           "timeout": "Timeout (seconds)",
           "retries": "Retries",
           "reconnect_delay": "Reconnect Delay (seconds)",
@@ -84,6 +85,7 @@
       "common": {
         "title": "Configuration",
         "data": {
+          "scan_interval": "Scan Interval (seconds)",
           "timeout": "Timeout (seconds)",
           "retries": "Retries",
           "reconnect_delay": "Reconnect Delay (seconds)",
